octave3.2 (3.2.4-9) UNRELEASED; urgency=low

  * debian/in/control: Give an explicit package name as preference for the
    virtual build-dependency on libcurl4-dev (closes: #618139).

 -- Thomas Weber <tweber@debian.org>  Sun, 20 Mar 2011 14:52:22 +0100

octave3.2 (3.2.4-8) unstable; urgency=low

  * New patch: include_mpi_headers, includes /usr/include/mpi by default when
    using mkoctfile (closes: #598227)

 -- Thomas Weber <tweber@debian.org>  Mon, 25 Oct 2010 21:44:40 +0200

octave3.2 (3.2.4-7) unstable; urgency=low

  * New patch: fix_relative_addpath command (closes: #592517)
  * Drop libgl1-mesa-swx11-dev and libglu1-mesa-dev from build-dependencies.
    They are already pulled in by other packages, so we don't need to force
    specific versions of Mesa (closes: #591333).

 -- Thomas Weber <tweber@debian.org>  Sun, 29 Aug 2010 17:34:45 +0200

octave3.2 (3.2.4-6) unstable; urgency=low

  * New patch: scale_image_point_color, scale image point color (closes:
    #581998)

 -- Thomas Weber <tweber@debian.org>  Mon, 24 May 2010 20:04:31 +0200

octave3.2 (3.2.4-5) unstable; urgency=low

  * New patch: fix-interp2; fixes wrong bicubic interpolation, triggered by
    octave-image's test suite (closes: #582276)

 -- Thomas Weber <tweber@debian.org>  Fri, 21 May 2010 23:25:14 +0200

octave3.2 (3.2.4-4) unstable; urgency=low

  * Rebuild and bump build-depends on libblas-dev to (>= 1.2.-7) and on
    liblapack-dev to (>= 3.2.1-7) to pick up the new alternatives
    configuration in the BLAS libraries (closes: #576812).

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Mon, 12 Apr 2010 23:22:49 +0200

octave3.2 (3.2.4-3) unstable; urgency=low

  * debian/control: Remove Rafael Laboissiere from Uploaders (closes: #571833,
    #571835)
  * debian/in/control: Compile without debug symbols on mips and mipsel
    (closes: #570771). This means we ship with an almost empty -dbg package on
    these architectures.